--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Birthday Timer OBS</title>
+  <title>Premium Birthday Timer OBS</title>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flipclock/0.7.8/flipclock.css">
-  <link href="https://fonts.googleapis.com/css2?family=Michroma&family=Montserrat:wght@100;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Michroma&family=Montserrat:wght@100;400;600&display=swap" rel="stylesheet">
 
   <style>
     :root { 
       --accent: #ff9f0a; 
+      --glow: rgba(255, 159, 10, 0.6);
     }
 
     body {
@@ -26,90 +27,139 @@
     }
 
     .widget {
-      background: rgba(0, 0, 0, 0.45);
-      backdrop-filter: blur(12px);
-      -webkit-backdrop-filter: blur(12px);
-      border: 1px solid rgba(255, 255, 255, 0.15);
-      border-radius: 30px;
-      padding: 40px 60px 30px;
+      background: rgba(0, 0, 0, 0.6);
+      backdrop-filter: blur(15px);
+      -webkit-backdrop-filter: blur(15px);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      border-radius: 40px;
+      padding: 50px 70px 40px;
       text-align: center;
       display: inline-block;
-      box-shadow: 0 30px 60px rgba(0,0,0,0.5);
+      box-shadow: 0 40px 80px rgba(0,0,0,0.6);
+      position: relative;
+      overflow: hidden; /* Для ефекту відблиску */
     }
 
-    /* Виправлений заголовок */
+    /* Анімована лінія по периметру (опціонально, додає стилю) */
+    .widget::before {
+      content: "";
+      position: absolute;
+      top: 0; left: 0; right: 0; height: 2px;
+      background: linear-gradient(90deg, transparent, var(--accent), transparent);
+      animation: scan-line 3s linear infinite;
+    }
+
+    @keyframes scan-line {
+      0% { transform: translateX(-100%); }
+      100% { transform: translateX(100%); }
+    }
+
+    /* Ефект відблиску на склі */
+    .glare {
+      position: absolute;
+      top: -100%; left: -100%;
+      width: 200%; height: 200%;
+      background: linear-gradient(45deg, transparent, rgba(255,255,255,0.05), transparent);
+      transform: rotate(45deg);
+      animation: glare-move 6s infinite;
+      pointer-events: none;
+    }
+
+    @keyframes glare-move {
+      0% { transform: translate(-10%, -10%) rotate(45deg); }
+      20% { transform: translate(100%, 100%) rotate(45deg); }
+      100% { transform: translate(100%, 100%) rotate(45deg); }
+    }
+
     .title {
       font-family: 'Michroma', sans-serif;
-      font-size: 50px;
+      font-size: 45px;
       color: #fff;
-      letter-spacing: 4px;
+      letter-spacing: 6px;
       text-transform: uppercase;
-      margin: 0 0 45px;
-      background: linear-gradient(180deg, #fff 0%, #bbb 100%);
+      margin: 0 0 50px;
+      background: linear-gradient(180deg, #fff 30%, var(--accent) 150%);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      filter: drop-shadow(0 2px 4px rgba(0,0,0,0.5));
+      filter: drop-shadow(0 4px 10px rgba(0,0,0,0.5));
     }
 
     .flip-clock-wrapper { margin: 0 !important; }
     
     .flip-clock-wrapper ul {
-      height: 85px;
-      width: 58px;
+      height: 90px;
+      width: 60px;
       background: #000;
+      box-shadow: 0 10px 20px rgba(0,0,0,0.4);
     }
 
     .flip-clock-wrapper ul li a div div.inn {
       font-family: 'Montserrat', sans-serif;
       font-weight: 600;
-      font-size: 64px;
-      background: #151515;
+      font-size: 68px;
+      background: #111;
       color: #fff;
-      border-radius: 10px;
-      text-shadow: 0 0 15px rgba(255, 159, 10, 0.4);
+      border-radius: 12px;
+      text-shadow: 0 0 20px var(--glow);
     }
 
-    /* Українські підписи */
     .flip-clock-divider .flip-clock-label {
       color: var(--accent) !important;
       font-family: 'Michroma', sans-serif;
-      font-size: 25px;
-      letter-spacing: 1px;
+      font-size: 14px; /* Трохи зменшив для балансу */
+      letter-spacing: 2px;
       text-transform: uppercase;
-      bottom: -100px !important;
-      opacity: 0.9;
+      bottom: -45px !important;
+      opacity: 0.8;
+      text-shadow: 0 0 10px var(--glow);
     }
 
     .flip-clock-dot {
       background: var(--accent);
-      box-shadow: 0 0 12px var(--accent);
+      box-shadow: 0 0 15px var(--accent);
+      animation: pulse-dot 1s infinite;
     }
 
-    /* Дата знизу */
+    @keyframes pulse-dot {
+      0%, 100% { opacity: 1; transform: scale(1); }
+      50% { opacity: 0.6; transform: scale(1.1); }
+    }
+
     .date-display {
-      margin-top: 40px;
+      margin-top: 60px;
       font-family: 'Montserrat', sans-serif;
-      font-size: 44px;
+      font-size: 40px;
       font-weight: 100;
       color: #fff;
-      letter-spacing: 12px;
-      border-top: 1px solid rgba(255, 255, 255, 0.1);
+      letter-spacing: 10px;
+      border-top: 1px solid rgba(255, 255, 255, 0.15);
       display: inline-block;
-      padding-top: 20px;
-      text-shadow: 0 0 20px rgba(255,255,255,0.2);
+      padding-top: 25px;
+      text-shadow: 0 0 20px rgba(255,255,255,0.3);
+      position: relative;
+    }
+
+    /* Маленька іконка перед датою */
+    .date-display::before {
+      content: "🎂";
+      font-size: 40px;
+      margin-right: 15px;
+      vertical-align: middle;
+      opacity: 0.7;
     }
 
     @media (max-width: 600px) {
-      .widget { padding: 30px 20px; }
-      .title { font-size: 50px; }
-      .date-display { font-size: 28px; }
+      .widget { padding: 40px 20px; }
+      .title { font-size: 30px; }
+      .date-display { font-size: 24px; }
     }
   </style>
 </head>
 
 <body>
   <div class="widget">
-    <div class="title" id="title">До дня народження </div>
+    <div class="glare"></div>
+    <div class="title" id="title">До дня народження</div>
 
     <div id="flip-clock"></div>
 
@@ -123,7 +173,6 @@
 
   <script>
     function getSeconds(){
-      // 1 Березня 2026 року
       const target = new Date(2026, 2, 1, 0, 0, 0);
       const now = new Date();
       return Math.max(0, Math.floor((target - now)/1000));
@@ -135,13 +184,13 @@
         countdown: true,
         callbacks: {
           stop: function(){
-            $('#title').text('З ДНЕМ НАРОДЖЕННЯ! 🎂');
-            $('.title').css('background', 'linear-gradient(180deg, #ff9f0a 0%, #cc7a00 100%)');
+            $('#title').text('З ДНЕМ НАРОДЖЕННЯ! 🎉');
+            $('.title').css('background', 'linear-gradient(180deg, #fff 0%, #ff9f0a 100%)');
+            $('.widget').css('border-color', 'var(--accent)');
           }
         }
       });
 
-      // Встановлюємо українські назви
       $('.days .flip-clock-label').text('Днів');
       $('.hours .flip-clock-label').text('Годин');
       $('.minutes .flip-clock-label').text('Хвилин');
